--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+	<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+	<script src="profiles.js"></script>  
 </head>
 <body>
 
@@ -30,7 +34,7 @@
 	  			<img src="img/connect.svg" width="100">
 	  			<h1>DC Connect</h1>
 	  			<p>Easily connect with Digital Crafts students. Are you looking for a person with a particular skill set? Great! Begin your search and find your perfect developer.</p>
-	  			<a href="./login/index.html" class="btn btn-primary">Log in</a>
+	  			<!-- a href="./login/index.html" class="btn btn-primary">Log in</a>
 	  			<!-- <button type="button" class="btn btn-primary" href="./login/index.html">Log in</button> -->
 	  		</div>
 	  	</div>
@@ -39,13 +43,13 @@
 	<div class="container">
   		<div class="sub-container">
   			<img src="img/employer.svg" width="60">
-  			<h3>Employers</h3>
-  			<p>Log in and start your search. Just type in your required skillset and view all DC students who meet that criteria. View their profile and send them a message.</p>
+  			<a href="profiles.html" class="btn btn-primary" role="button">Employers</a>
+  			<p>Click here start your search. Just type in your required skillset and view all DC students who meet that criteria. View their profile and send them a message.</p>
   		</div>
   			
   		<div class="sub-container dummyClass">
-  			<img src="img/student.svg" width="60">
-  			<h3>Students</h3>
+			<img src="img/student.svg" width="60">
+			<a href="profiles.html" class="btn btn-primary" role="button">Students</a>
   			<p>This is for you too! Update your bio, resume, social media and project page so that you can be found by awesome companies.</p>
   		</div>
   			
